# atmc

./: .gitignore  CMakeLists.txt  Makefile  atmcmodule.cpp  setup.py  setup.py.in  test.py  test_atmc.py
atmc/: __init__.py  armadillo.pxd  armadillo.pyx  atmc.py  atmcmodule.cpp  docstrings.h  mcopt.pxd  mcopt_wrapper.cpp  mcopt_wrapper.pxd  mcopt_wrapper.pyx  mixins.py
notebooks/: Testing.ipynb  Testing.py
tests/: test_atmc.py
